# handlers/permission.go
@@ -8,6 +8,11 @@ import (
 )
 
 // PermissionGetAll simply returns a list of all the roles available.
+// @Summary Returns a list of default roles.
+// @Description Returns a list of all the roles available.
+// @Tags rbac
+// @Success 200 {array} gaia.UserRoleCategory
+// @Router /permission [get]
 func PermissionGetAll(c echo.Context) error {
 	return c.JSON(http.StatusOK, rolehelper.DefaultUserRoles)
 }
